sumo/tests/netconvert/errors/XML/xml_no_edg/errors.netconvert
Error: Edges must be supplied.
Quitting (on error).
